--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,15 @@
   height: 100vh;
 }
 
+@media screen and (max-width: 768px) {
+  .App {
+    background: rgb(4, 15, 24);
+    background: linear-gradient(32deg, rgba(4, 15, 24, 1) 24%, rgba(34, 68, 67, 1) 170%);
+    width: 100%;
+    overflow: hidden;
+  }
+}
+
 .glass {
   background: rgba(255, 255, 255, 0.06);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
