add configure for add data to state

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 body {
   margin: 0;
+  background: rgb(4, 15, 24);
+  background: linear-gradient(32deg, rgba(4, 15, 24, 1) 24%, rgba(34, 68, 67, 1) 170%);
   font-family: nunito, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
