--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&display=swap");
+
+.centerY {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.centerX {
+  left: 50%;
+  transform: translateX(-50%);
+}
